tests/baselines/reference/YieldStarExpression1_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldStarExpression1_es6.ts(1,1): error TS2552: Cannot find name 'yield'. Did you mean 'eval'?
tests/cases/conformance/es6/yieldExpressions/YieldStarExpression1_es6.ts(1,9): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.


==== tests/cases/conformance/es6/yieldExpressions/YieldStarExpression1_es6.ts (2 errors) ====
    yield * [];
    ~~~~~
!!! error TS2552: Cannot find name 'yield'. Did you mean 'eval'?
            ~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.